# LSTM_anom_detect

./: .gitignore  README.md  pyproject.toml
src/: artigo.ipynb  data_preprocess.py  hour_tresh.py  lstm_metro_dataset.py  metric.py  rolling_tresh_hour.py
