[project]
name = "lstm-anom-detect"
version = "0.1.0"
description = ""
authors = [
    {name = "hopperjc",email = "mhjc@cin.ufpe.br"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "numpy (>=2.3.0,<3.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "torch (>=2.7.1,<3.0.0)",
    "torchvision (>=0.22.1,<0.23.0)",
    "torchaudio (>=2.7.1,<3.0.0)",
    "jupyterlab (>=4.4.3,<5.0.0)",
    "ucimlrepo (>=0.0.7,<0.0.8)",
    "kagglehub (>=0.3.12,<0.4.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
